--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-top-bar></app-top-bar>
 
 <div class="container">
-  <router-outlet><h3></h3></router-outlet>
+  <router-outlet></router-outlet>
 </div>
 
 <!-- 
