--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,6 +1,25 @@
 <h2>Products</h2>
 
+<div *ngFor="let product of products">
+  <h3>
+    <a [title] = "'product.name' + 'details'"></a>
+    {{ product.name }}
+  </h3>
+  <p *ngIf="product.description">
+    Description: {{product.description}}
+  </p>
 
+  <div>
+    <button (click)="share()">
+      Share
+    </button>
+
+    <app-product-alert
+      [product]="product"
+      (notify)="onNotify()">
+    </app-product-alert>
+  </div>
+</div>
 <!-- 
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
